--- a/styles/cast-main.css
+++ b/styles/cast-main.css
@@ -48,6 +48,20 @@ body {
     }
 }
 
+#popupwindow {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    padding: 25px;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    font-size: 24px;
+    border: solid white;
+}
+
 #tapcontainer {
     position: fixed;
     z-index: 1;
